feat(auth): Refactor authentication system and implement responsive theme toggle

--- a/LungLife/lunglife_frontend/angular.json
+++ b/LungLife/lunglife_frontend/angular.json
@@ -9,6 +9,11 @@
         "@ionic/angular-toolkit:page": {
           "styleext": "scss",
           "standalone": true
+        },
+        "@schematics/angular:component": {
+          "style": "scss",
+          "skipTests": false,
+          "standalone": true
         }
       },
       "root": "",
