--- a/LungLife/lunglife_frontend/package.json
+++ b/LungLife/lunglife_frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "name": "lunglife-frontend",
+  "version": "1.0.0",
+  "author": "LungLife Team",
+  "homepage": "https://lunglife.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4200",
@@ -40,20 +40,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.3.5",
-    "@angular-eslint/builder": "^20.0.0",
-    "@angular-eslint/eslint-plugin": "^20.0.0",
-    "@angular-eslint/eslint-plugin-template": "^20.0.0",
-    "@angular-eslint/schematics": "^20.0.0",
-    "@angular-eslint/template-parser": "^20.0.0",
+    "@angular-eslint/builder": "^20.4.0",
+    "@angular-eslint/eslint-plugin": "^20.4.0",
+    "@angular-eslint/eslint-plugin-template": "^20.4.0",
+    "@angular-eslint/schematics": "^20.4.0",
+    "@angular-eslint/template-parser": "^20.4.0",
     "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.3.4",
     "@angular/language-service": "^20.3.4",
     "@capacitor/cli": "7.4.3",
     "@ionic/angular-toolkit": "^12.0.0",
+    "@playwright/test": "^1.49.0",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
+    "@typescript-eslint/types": "^8.46.0",
+    "@typescript-eslint/utils": "^8.46.0",
     "eslint": "^9.16.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
@@ -65,8 +68,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.8.0",
-    "@playwright/test": "^1.49.0"
+    "typescript": "~5.8.0"
   },
-  "description": "An Ionic project"
+  "description": "LungLife Frontend - A comprehensive platform for lung cancer detection and management"
 }
