feat: implement password recovery system and UI improvements
Backend:
- Add forgot password endpoints with token generation and validation
- Implement password reset with secure token-based authentication
- Add password recovery fields to user repository interface
- Enhance authentication service with email-based recovery flow

Frontend:
- Fix login button validation logic (remove rate limiting block)
- Resolve profile page template parsing errors with safe navigation
- Remove header bars from profile and dashboard pages for clean UI
- Fix dashboard.page.ts compilation errors and code corruption
- Update register page with proper form validation

--- a/LungLife/lunglife_backend/package.json
+++ b/LungLife/lunglife_backend/package.json
@@ -9,7 +9,8 @@
     "typecheck": "tsc --noEmit",
     "start:prod": "ts-node src/index.ts",
     "test:auth": "ts-node src/scripts/complete_auth_test.ts",
-    "test:registration": "ts-node src/scripts/test_registration_http.ts"
+    "test:registration": "ts-node src/scripts/test_registration_http.ts",
+    "test:forgot-password": "ts-node src/scripts/test_forgot_password.ts"
   },
   "keywords": [
     "lunglife",
