feat: Implement Jest testing framework, Health Check endpoints and Swagger API documentation

--- a/LungLife/lunglife_backend/package.json
+++ b/LungLife/lunglife_backend/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
+    "build": "tsc",
     "typecheck": "tsc --noEmit",
     "start:prod": "ts-node src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:verbose": "jest --verbose",
     "test:auth": "ts-node src/scripts/complete_auth_test.ts",
     "test:registration": "ts-node src/scripts/test_registration_http.ts",
     "test:forgot-password": "ts-node src/scripts/test_forgot_password.ts"
@@ -41,15 +46,22 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.5.0",
     "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
     "@types/qrcode": "^1.5.5",
     "@types/speakeasy": "^2.0.10",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^10.0.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.0.1",
     "rimraf": "^6.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
