--- a/LungLife/lunglife_frontend/package.json
+++ b/LungLife/lunglife_frontend/package.json
@@ -36,17 +36,19 @@
     "crypto-js": "^4.2.0",
     "firebase": "^11.10.0",
     "ionicons": "^7.0.0",
+    "libphonenumber-js": "^1.12.24",
+    "ngx-intl-tel-input": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^20.3.5",
-    "@angular-eslint/builder": "^20.4.0",
-    "@angular-eslint/eslint-plugin": "^20.4.0",
-    "@angular-eslint/eslint-plugin-template": "^20.4.0",
-    "@angular-eslint/schematics": "^20.4.0",
-    "@angular-eslint/template-parser": "^20.4.0",
+    "@angular-eslint/builder": "20.4.0",
+    "@angular-eslint/eslint-plugin": "20.4.0",
+    "@angular-eslint/eslint-plugin-template": "20.4.0",
+    "@angular-eslint/schematics": "20.4.0",
+    "@angular-eslint/template-parser": "20.4.0",
     "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.3.4",
     "@angular/language-service": "^20.3.4",
@@ -55,11 +57,11 @@
     "@playwright/test": "^1.49.0",
     "@types/jasmine": "~5.1.0",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.18.0",
-    "@typescript-eslint/parser": "^8.18.0",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
     "@typescript-eslint/types": "^8.46.0",
     "@typescript-eslint/utils": "^8.46.0",
-    "eslint": "^9.16.0",
+    "eslint": "8.57.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-prefer-arrow": "1.2.2",
