chore: cleanup and reorganize project documentation
- Remove duplicated markdown files (README_02.md, ionic.md)
- Remove duplicated backend documentation (ARQUITECTURA.md, README.md from backend folder)
- Remove old epidemiological documents from root docs folder
- Update main README.md with consolidated information
- Update .gitignore for better file organization
- Add PROYECTO-APT.md with academic project context

This cleanup removes redundant files and consolidates documentation structure for better maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -511,3 +511,7 @@ typings/
 libpeerconnection.log
 testem.log
 nul
+LungLife\lunglife_docs\01.-Capstone_709V
+ARQUITECTURA.md
+PROYECTO-APT.md
+REFACTORING_ANALYSIS.md
