refactor(styles): clean up obsolete auth-styles.css and gitignore compiled CSS
- Delete src/assets/auth-styles.css (unused duplicate of auth.styles.scss)
- Add compiled CSS outputs to .gitignore (global.css, variables.css + maps)
- These files are regenerated on every build and shouldn't be tracked

--- a/LungLife/lunglife_frontend/.gitignore
+++ b/LungLife/lunglife_frontend/.gitignore
@@ -29,6 +29,12 @@ log.txt
 /out-tsc
 /bazel-out
 
+# Compiled CSS outputs (regenerated on build)
+src/global.css
+src/global.css.map
+src/theme/variables.css
+src/theme/variables.css.map
+
 # Node
 /node_modules
 npm-debug.log
