fix(backend): clean up orphaned code and fix TypeScript errors
- Remove unused profile.controller.ts (orphaned, not imported anywhere)
- Fix domain/index.ts duplicate exports (UserRole, IUserRepository)
- Fix presentation/index.ts reference to deleted profile.controller
- Fix risk-assessment.repository.ts null vs undefined types
- Update repository.interface.ts create() to accept DTOs
- All TypeScript compilation errors resolved

--- a/LungLife/lunglife_backend/tsconfig.json
+++ b/LungLife/lunglife_backend/tsconfig.json
@@ -13,15 +13,11 @@
     "resolveJsonModule": true
   },
   "include": [
-    "src/index.ts",
-    "src/routes/**/*.ts",
-    "src/controllers/auth.controller.v2.ts",
-    "src/core/**/*.ts",
-    "src/scripts/**/*.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
     "dist",
-    "src/tests"
+    "tests"
   ]
 }
